--- a/english.html
+++ b/english.html
@@ -373,6 +373,8 @@ Error message and password prompt
 
 <li>Charlie Kaufman</li>
 
+<li>Chat noir</li>
+
 <li>Chava Alberstein</li>
 
 <li>Cheese pie</li>
@@ -1039,6 +1041,8 @@ Error message and password prompt
 
 <li>The archive's trustees</li>
 
+<li>The artist</li>
+
 <li>The barber shop</li>
 
 <li>The baristas here</li>
@@ -1057,11 +1061,15 @@ Error message and password prompt
 
 <li>The Bridge</li>
 
+<li>The business lady</li>
+
 <li>The Camera</li>
 
 <li>The Chinese</li>
 
 <li>The Clinique</li>
+
+<li>The counselor</li>
 
 <li>The Couscous</li>
 
@@ -1292,6 +1300,8 @@ Error message and password prompt
 <li>Yoyo</li>
 
 <li>Yoyo and Gura</li>
+
+<li>Zzzen radio</li>
 
 </ul>
 </p>
@@ -9152,7 +9162,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[On the spectrum]] Holocaust [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The counselor]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9172,7 +9182,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200627221513873" title="$:/temp/search">
+<div created="20161023184814872" modified="20200628134555030" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10189,6 +10199,17 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
 
  &lt;&lt;heblink [[צ'רלי קאופמן]]&gt;&gt;
 . </pre>
+</div>
+<div created="20200628134549176" modified="20200628134708193" tags="HH" title="Chat noir">
+<pre>
+[img[pictures/chatnoir.jpg]]
+
+
+
+ &lt;&lt;heblink [[שָה נוּאָר]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200225170224847" modified="20200410104914516" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]] [[Hunky Dory]]" title="Chava Alberstein">
 <pre>[img[pictures/chava-alberstein.jpg]]
@@ -11726,8 +11747,7 @@ It's the end of Sukkot 2018, at the afternoon hours, Sheffi drove with Nano our 
 </pre>
 </div>
 <div created="20200627215526134" modified="20200627221454129" tags="HH [[True stories]] [[The global village]]" title="Holocaust">
-<pre>
-[img[pictures/shoa.jpg]]
+<pre>[img[pictures/shoa.jpg]]
 
 
 
@@ -14655,6 +14675,16 @@ When I was a student, I used to work as a security guard at the Editorial's yard
 
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
+<div created="20200628140937832" modified="20200628141040106" tags="HH" title="The artist">
+<pre>
+[img[pictures/GiEmDl9Jbt722qkR.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[האומנית]]&gt;&gt;
+</pre>
+</div>
 <div created="20200322164751976" modified="20200322165142324" tags="HH" title="The barber shop">
 <pre>[img[pictures/hamispara.jpg]]
 
@@ -14762,6 +14792,18 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 </pre>
 </div>
+<div created="20200628140616355" modified="20200628140854502" tags="HH" title="The business lady">
+<pre>
+[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[אשת העסקים]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200627162251658" modified="20200627162501360" tags="HH" title="The Camera">
 <pre>[img[pictures/UqCNt0i5VQFWqv6t.jpg]]
 
@@ -14813,6 +14855,18 @@ It's hard to believe, that in a room that I love so much, a filthy man's work wa
 
 
  &lt;&lt;heblink [[הקליניקה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200628140105938" modified="20200628140358737" tags="HH" title="The counselor">
+<pre>
+[img[pictures/thecounselor.jpg]]
+
+
+
+
+
+
+ &lt;&lt;heblink [[היועצת]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215114029313" modified="20200219133323412" tags="Restaurants Meals [[Food addicts]] Kitchens [[The kitchen by Genevieve]]" title="The Couscous">
@@ -15620,7 +15674,7 @@ Who doesn't like the taste of [[real blood|https://www.imdb.com/title/tt0844441/
 
 </pre>
 </div>
-<div created="20200212204228178" modified="20200627215704179" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
+<div created="20200212204228178" modified="20200628141020760" tags="[[True stories]] [[Single parent children]] Children [[Here in the Ghetto]] [[Corona beings]] Windows" title="TV">
 <pre>[img[pictures/television.jpg]]
 
 
@@ -16390,6 +16444,18 @@ Actually, I didn't know David Bowie well before Yoyo became part of my daily lif
 <pre>[img[pictures/yoyo-ve-gura.jpg]]
 
  &lt;&lt;heblink [[יויו וגורה]]&gt;&gt;</pre>
+</div>
+<div created="20200628135532718" modified="20200628135958919" tags="HH Music" title="Zzzen radio">
+<pre>
+[img[pictures/galey-zachal.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[גלי זחל]]&gt;&gt;
+
+
+</pre>
 </div>
 
 </div>
