--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="שואה [[האחיות כהן]]" title="$:/StoryList">
+<div list="היועצת האומנית [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9280,7 +9280,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200627161336659" title="$:/temp/search">
+<div created="20161023184814872" modified="20200627221625712" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10794,10 +10794,16 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Arnon Chen]]&gt;&gt;
 </pre>
 </div>
-<div created="20170319170256065" modified="20170507182017466" tags="HH" title="אשת העסקים">
+<div created="20170319170256065" modified="20200628140903777" tags="HH" title="אשת העסקים">
 <pre>[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
 
-נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
+נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.
+
+
+
+
+&lt;&lt;englink [[The business lady]]&gt;&gt;
+</pre>
 </div>
 <div created="20180825155311148" modified="20200223184633689" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
 <pre>[img[pictures/barby.jpg]]
@@ -11094,7 +11100,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200627220725329" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200628141326060" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -11971,12 +11977,20 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170506193344594" modified="20180208154155770" tags="HH מוזיקה" title="גלי זחל">
+<div created="20170506193344594" modified="20200628135923753" tags="HH מוזיקה" title="גלי זחל">
 <pre>[img[pictures/galey-zachal.jpg]]
 
 !!![[גורה]]:
 
-אחת מתוך שתי תחנות רדיו מקומיות של [[מצפה ראשית]], שנמצאת [[בחנות הדיסקים|חנות דיסקים]].</pre>
+[[אחת מתוך שתי|גלי זחל]] תחנות רדיו מקומיות של [[מצפה ראשית]], שנמצאת [[בחנות הדיסקים|חנות דיסקים]].
+
+
+
+&lt;&lt;englink [[Zzzen radio]]&gt;&gt;
+
+
+
+</pre>
 </div>
 <div created="20181005175015650" modified="20200217144348070" tags="[[כאן בגטו]] [[בדרך לאן שהוא]]" title="גלסי">
 <pre>[img[pictures/galsi.jpg]]
@@ -12377,7 +12391,7 @@ different tastes, but there were things we both love: family, work, people in al
 
 &lt;&lt;englink [[Daphne Abaroah]]&gt;&gt;</pre>
 </div>
-<div created="20170319161219583" modified="20170507181946375" tags="HH" title="האומנית">
+<div created="20170319161219583" modified="20200628141353901" tags="HH" title="האומנית">
 <pre>[img[pictures/GiEmDl9Jbt722qkR.jpg]]
 
 !!![[גורה]]:
@@ -12385,6 +12399,10 @@ different tastes, but there were things we both love: family, work, people in al
 ניסיתי לתאר את סרות טעמה של הדי, K SISTER סרת טעם במיוחד, אך כנראה שלא מאד נכנסתי לזה, כי הדי היא סרת טעם בהרבה ממה שרואים בתמונה הזו. 
 
 שיערה קצוץ, אך משערות ערפה יוצאת צמה ארוכה. היא מאותגרת משקלית ונוהגת להתכסות במיני טייץ, מעליהן היא נוטה לעטות טוניקות צבעוניות או שחורות, מעליהן היא עונדת כמות אדירה של תכשיטים ענקיים מלאי אבנים מלאות בסיפורים מלאי רגש. בת המזל אף נשואה לבעל בעל אמצעים.
+
+
+
+&lt;&lt;englink [[The artist]]&gt;&gt;
 
 </pre>
 </div>
@@ -12804,15 +12822,21 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170319175820365" modified="20170507182050728" tags="HH" title="היועצת">
-<pre>[img[pictures/jviFwEifMecvUKp4.jpg]]
+<div created="20170319175820365" modified="20200628140511183" tags="HH" title="היועצת">
+<pre>[img[pictures/thecounselor.jpg]]
 
 !!![[גורה]]:
 
 סיגלית היא לא סתם יועצת - היא יועצת רוחנית.
 היא קיי מלידה, שמה המלא הוא סיגלית קלמן.  
 
-היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.</pre>
+היא רזה מאוד, ובבעלותה חתול מצרי שנמצא אתה כל הזמן. היא נטשה קריירה בעסקי הנדל&quot;ן שלא הייתה לטובת &quot;האור&quot;.  גרושה גועל נפש.
+
+
+
+&lt;&lt;englink [[The counselor]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20181209191626889" modified="20200213212229459" tags="[[אירי וגורה]] [[קופים ממונעים]] [[בחוות החיות]] [[האחיות בלות]] [[מטא בדיון]]" title="היסטריות">
 <pre>[img[pictures/histeriyot.jpg]]
@@ -19925,17 +19949,18 @@ Fapina''
 
 &lt;&lt;englink [[The sisters' questionnaire]]&gt;&gt;</pre>
 </div>
-<div created="20161026213244448" modified="20200627111612104" tags="HH" title="שָה נוּאָר">
-<pre>ב[[ים טתיס]] אין כיסוי סלולרי או אינטרנט, אבל ב[[געזונטהייטס]] יש
+<div created="20161026213244448" modified="20200628134801473" tags="HH" title="שָה נוּאָר">
+<pre>[img[pictures/chatnoir.jpg]]
+
+
+!!![[יויו]]:
+
+ב[[ים טתיס]] אין כיסוי סלולרי או אינטרנט, אבל ב[[געזונטהייטס]] יש
 [[מגדל סלולרי מקומי|https://en.wikipedia.org/wiki/OpenBTS]]
 שמספק לדיירים טלפוניה ביניהם, וגישה ל[[אינטראנט|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%A0%D7%98%D7%A8%D7%90%D7%A0%D7%98]], שזו מילה קצת גדולה בשביל רשת שמכילה שרת אחד בלבד. לשרת הזה קוראים שָה נוּאָר. ממעמקי [[המרתף של סטלין]] הוא מספק עולם דיגיטלי קסום וארכאי: פורום, מערכת בלוגים, וויקי, ואפילו [[מערכת רדיו מקוון|https://en.wikipedia.org/wiki/Icecast]] שבאמצעותה אפשר להאזין ל[[גלי זחל]] — תחנת הרדיו של [[חנות התקליטים|חנות דיסקים]].
 
-@@.center
-[img[למצולמים אין קשר|https://upload.wikimedia.org/wikipedia/commons/4/4c/Blackcat-Lilith.jpg]]
 
-[[למצולמים אין קשר|https://en.wikipedia.org/wiki/Kuroneko_(disambiguation)#/media/File:Blackcat-Lilith.jpg]]
-@@
-
+&lt;&lt;englink [[Chat noir]]&gt;&gt;
 </pre>
 </div>
 <div created="20170821183123825" modified="20200215155252499" tags="[[דןדן נסע]] מסעדות [[חיות אוכל]] מטבחים" title="שה פניס">
@@ -19969,8 +19994,7 @@ Fapina''
 </pre>
 </div>
 <div created="20161219172718131" modified="20200627221430486" tags="HH [[סיפורים אמיתיים]] [[הכפר הגלובלי]]" title="שואה">
-<pre>
-[img[pictures/shoa.jpg]]
+<pre>[img[pictures/shoa.jpg]]
 
 
 
