--- a/english.html
+++ b/english.html
@@ -9162,7 +9162,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The counselor]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9182,7 +9182,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200628134555030" title="$:/temp/search">
+<div created="20161023184814872" modified="20200628145637911" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10201,8 +10201,7 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
 . </pre>
 </div>
 <div created="20200628134549176" modified="20200628134708193" tags="HH" title="Chat noir">
-<pre>
-[img[pictures/chatnoir.jpg]]
+<pre>[img[pictures/chatnoir.jpg]]
 
 
 
@@ -14676,8 +14675,7 @@ When I was a student, I used to work as a security guard at the Editorial's yard
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
 <div created="20200628140937832" modified="20200628141040106" tags="HH" title="The artist">
-<pre>
-[img[pictures/GiEmDl9Jbt722qkR.jpg]]
+<pre>[img[pictures/GiEmDl9Jbt722qkR.jpg]]
 
 
 
@@ -14793,8 +14791,7 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 </pre>
 </div>
 <div created="20200628140616355" modified="20200628140854502" tags="HH" title="The business lady">
-<pre>
-[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
+<pre>[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
 
 
 
@@ -14858,8 +14855,7 @@ It's hard to believe, that in a room that I love so much, a filthy man's work wa
 </pre>
 </div>
 <div created="20200628140105938" modified="20200628140358737" tags="HH" title="The counselor">
-<pre>
-[img[pictures/thecounselor.jpg]]
+<pre>[img[pictures/thecounselor.jpg]]
 
 
 
@@ -16446,8 +16442,7 @@ Actually, I didn't know David Bowie well before Yoyo became part of my daily lif
  &lt;&lt;heblink [[יויו וגורה]]&gt;&gt;</pre>
 </div>
 <div created="20200628135532718" modified="20200628135958919" tags="HH Music" title="Zzzen radio">
-<pre>
-[img[pictures/galey-zachal.jpg]]
+<pre>[img[pictures/galey-zachal.jpg]]
 
 
 
