--- a/english.html
+++ b/english.html
@@ -15097,8 +15097,8 @@ Here and now during the Corona times, not more than a hundred meters from home, 
  &lt;&lt;heblink [[התור לגרציאני]]&gt;&gt;
 </pre>
 </div>
-<div created="20200627161929886" modified="20200627162137475" tags="HH" title="The Masseur">
-<pre>[img[pictures/sVIXOUGXydNO6V0Z.jpg]]
+<div created="20200627161929886" modified="20200628163805327" tags="HH" title="The Masseur">
+<pre>[img[pictures/themasseur.jpg]]
 
 
 !!![[Gura]]:
