--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="האומנית [[האחיות כהן]]" title="$:/StoryList">
+<div list="המסאז'יסטית האומנית [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12983,8 +12983,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170318201423053" modified="20200627162231513" tags="HH" title="המסאז'יסטית">
-<pre>[img[pictures/sVIXOUGXydNO6V0Z.jpg]]
+<div created="20170318201423053" modified="20200628163724243" tags="HH" title="המסאז'יסטית">
+<pre>[img[pictures/themasseur.jpg]]
 
 
 !!![[גורה]]:
