--- a/english.html
+++ b/english.html
@@ -14674,8 +14674,8 @@ When I was a student, I used to work as a security guard at the Editorial's yard
 
  &lt;&lt;heblink [[נאמני הגנזך]]&gt;&gt;</pre>
 </div>
-<div created="20200628140937832" modified="20200628141040106" tags="HH" title="The artist">
-<pre>[img[pictures/GiEmDl9Jbt722qkR.jpg]]
+<div created="20200628140937832" modified="20200629161228230" tags="HH" title="The artist">
+<pre>[img[pictures/theartist.jpg]]
 
 
 
