--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="המסאז'יסטית [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12391,8 +12391,8 @@ different tastes, but there were things we both love: family, work, people in al
 
 &lt;&lt;englink [[Daphne Abaroah]]&gt;&gt;</pre>
 </div>
-<div created="20170319161219583" modified="20200628141353901" tags="HH" title="האומנית">
-<pre>[img[pictures/GiEmDl9Jbt722qkR.jpg]]
+<div created="20170319161219583" modified="20200629161208236" tags="HH" title="האומנית">
+<pre>[img[pictures/theartist.jpg]]
 
 !!![[גורה]]:
 
