--- a/english.html
+++ b/english.html
@@ -1043,8 +1043,6 @@ Error message and password prompt
 
 <li>The artist</li>
 
-<li>The barber shop</li>
-
 <li>The baristas here</li>
 
 <li>The bartender</li>
@@ -1086,6 +1084,8 @@ Error message and password prompt
 <li>The global village</li>
 
 <li>The Grass</li>
+
+<li>The Hair Salon</li>
 
 <li>The Hairdresser</li>
 
@@ -9028,7 +9028,7 @@ Error message and password prompt
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
             &quot;title&quot;: &quot;Untitled&quot;,
-            &quot;text&quot;: &quot;The newspaper desk&quot;,
+            &quot;text&quot;: &quot;The Sailor&quot;,
             &quot;type&quot;: &quot;text/plain&quot;
         }
     }
@@ -9153,7 +9153,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200605134439277" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200627221728498" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200713160631480" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9182,7 +9182,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200628145637911" title="$:/temp/search">
+<div created="20161023184814872" modified="20200713160607242" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10504,8 +10504,15 @@ Maybe now, us,  the residents of Toontown, will get the ending that we deserve, 
 
 </pre>
 </div>
-<div created="20200212220505011" modified="20200215162033334" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
+<div created="20200212220505011" modified="20200713160626625" tags="[[Monkeys with car keys]] Children [[A friend]] [[I would like to apologize]]" title="Coen sister">
 <pre>[img[pictures/achot-coen.jpg]]
+
+
+[[Peace and Love|Imagine]]. 
+
+
+
+
 
 &lt;&lt;list-links filter:&quot;[tag[Coen sister]]&quot;&gt;&gt;
 
@@ -11374,12 +11381,12 @@ She loves us and take care of us all. In the end of every working day she moves 
 
  &lt;&lt;heblink [[ז'נבייב]]&gt;&gt;</pre>
 </div>
-<div created="20200322160112085" modified="20200625133759583" tags="HH Houses" title="Gesund-Heights">
+<div created="20200322160112085" modified="20200713155050207" tags="HH Houses" title="Gesund-Heights">
 <pre>[img[pictures/JOI7qxUSCqd04xay.jpg]]
 
 !!![[Gura]]:
 
-A building, located at [[Genesis Hilltop]], viewing Tethys Sea. The building is located at the industrial area of the downtown. It has 6 floors and it belongs to [[Shalom]]. On the fourth floor [[the hostel|The Hostel]] is located, where the passersby sleep over night. On the third floor there are three offices. On the second floor an [[esoteric news desk|The newspaper desk]]. On the first floor  [[Cafe Müller]] is located, it has a plaza which contains also the [[hairdressing salon|The barber shop]], the [[CDs store|Cd store]]. The building also has a basement where the janitor Stalin lives. In the basement there are the storerooms as well.
+A building, located at [[Genesis Hilltop]], viewing Tethys Sea. The building is located at the industrial area of the downtown. It has 6 floors and it belongs to [[Shalom]]. On the fourth floor [[the hostel|The Hostel]] is located, where the passersby sleep over night. On the third floor there are three offices. On the second floor an [[esoteric news desk|The newspaper desk]]. On the first floor  [[Cafe Müller]] is located, it has a plaza which contains also the [[The Hair Salon]], the [[CDs store|Cd store]]. The building also has a basement where the janitor Stalin lives. In the basement there are the storerooms as well.
 
 Gesund-Heights is the prime arena of [[everything that (might have) occurred and everything that (almost) happened in the HH|HH]]. 
 
@@ -11693,10 +11700,34 @@ The only thing that I'm missing here [[in the ghetto|https://www.youtube.com/wat
 
 </pre>
 </div>
-<div created="20200202172034727" modified="20200322152912493" tags="Metafiction" title="HH">
-<pre>Happy Hour
+<div created="20200202172034727" modified="20200713154342816" tags="Metafiction" title="HH">
+<pre>''Happy Hour''
+
+
+''[[Gura]]:''
+
+
+
+''Again, now it's 2016, and I'm releasing what we wrote in the first years of the current millennium:''
+
+
+
 
 [img[pictures/hh.jpg]]
+
+
+
+
+
+
+
+Eight chapters that describe the events of the building's workers, residents and passersby lives. It mainly focuses on nine women who work there and on [[Shalom]]. However there are supporting characters and guest characters. Over time it becomes clear by the events that the women are &quot;divided&quot; to &quot;two camps&quot;. The camps aren't defined as camps, but as a product of (virtual) reality. [[The camera|The Camera]] is the story teller as it patrols between the floors and the rooms of the building, and the nearby city streets up until [[Marina Zoto]] on the shore of [[Tethys ocean]]. It watches with a loving gaze over Shalom, [[the bartender|The bartender]], [[DJ and discs dudet]], [[the hairdresser|The Hairdresser]], [[the sailor|The Sailor]] and [[the masseur|The Masseur]] (AKA the Coen sisters) and suspiciously examines [[the artist|The artist]], the [[business woman|The business lady]], [[the lawyer|The lawyer]] and [[the counselor|The counselor]] (AKA the K sisters). Once in a while a temporary [[K sister|The K Sisters]] joins the K sisters and interfere with the daily routine in the building. The temporary K sister can be a male, a female or any other living creature. By the camera division any character can become a sister for a moment or permanently.  
+
+On the first episodes, into the lives of the existing characters enters a fifth K sister, who embodies the character of [[an art trader|Odelia]], that tries to get Shalom to like her, and take his money. She lodges at [[the hostel|The Hostel]] on the fourth floor, and tries to win the heart of the above-mentioned. She finds out that the man who sent her to the temptation mission has arrived to the city as well, he is a fat sweaty lawyer, EA is the name, who too embodies an art trader figure, in order to follow Odelia. In addition he finds out that her unruly brother, in the course of escaping the police in the country that they came from, has also arrived the city. Later Odelia's brother hides in the Building's basement, where he's found by [[Stalin]], the janitor and the maintenance person of the building. The conspiracy is exposed mainly by the C sisters (with much grace and sophistication ?). Actually all the building's residents including [[the newspaper desk people|The newspaper desk]], the hostel lodgers etc. contribute to the solution of the plot. Afterwards, as they solve and progress another plot is developing- quarrels between the permanent characters, personal issues of the private lives of these characters, other passersby etc. Each episode is about forty minutes long, and mainly ends at the traditional HAPPY HOUR, an hour of drinks, [[Aunt Jemima]], happy and fun at [[Cafe Müller]].
+
+
+
+
 
 
 &lt;&lt;list-links filter:&quot;[tag[HH]]&quot;&gt;&gt;
@@ -11932,12 +11963,19 @@ He thinks Rita got sick because of me. I don't know how he spends his spare time
 
 </pre>
 </div>
-<div created="20200212174127022" modified="20200513151407494" tags="Music [[How many songs can you even invent at all]] [[The global village]] [[Stories from the future]]" title="Imagine">
-<pre>[img[pictures/imagine.jpg]]
+<div created="20200212174127022" modified="20200713160738241" tags="Music [[How many songs can you even invent at all]] [[The global village]] [[Stories from the future]]" title="Imagine">
+<pre>
+
 
 !!![[Coen Sisters]]:
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=L6svOHFSAH8]]
+
+
+
+[img[pictures/imagine.jpg]]
+
+
 
 
 
@@ -14438,8 +14476,14 @@ The [[Alexanderian|Alexander Technique]] thinking is very beneficial, in order t
  &lt;&lt;heblink [[קפיץ ספירלי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200627152629924" modified="20200627152804385" tags="HH Metafiction" title="Stalin">
+<div created="20200627152629924" modified="20200713155549737" tags="HH Metafiction" title="Stalin">
 <pre>[img[pictures/stalin.jpg]]
+
+
+
+!!![[Yoyo]]:
+
+In order to get to the office of Stalin, the janitor of [[Gesund-Heights]] who's located at [[the basement|Stalin's basement]] of the building, you have to go through obstacles that ensure your absence. He runs inside of it, among other things, [[a local server|Chat noir]].
 
 
 
@@ -14683,14 +14727,6 @@ When I was a student, I used to work as a security guard at the Editorial's yard
  &lt;&lt;heblink [[האומנית]]&gt;&gt;
 </pre>
 </div>
-<div created="20200322164751976" modified="20200322165142324" tags="HH" title="The barber shop">
-<pre>[img[pictures/hamispara.jpg]]
-
-
-
- &lt;&lt;heblink [[מספרה]]&gt;&gt;
-</pre>
-</div>
 <div created="20200226072300277" modified="20200605134310284" tags="[[Here in the Ghetto]] Coffee Cafés" title="The baristas here">
 <pre>[img[pictures/barista.jpg]]
 
@@ -14790,10 +14826,12 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 </pre>
 </div>
-<div created="20200628140616355" modified="20200628140854502" tags="HH" title="The business lady">
+<div created="20200628140616355" modified="20200713160456368" tags="HH" title="The business lady">
 <pre>[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
 
+!!![[Gura]]:
 
+Nadia is a business woman of the [[K kind|The K Sisters]]. She looks old, and dresses old and brown (polyester and terylene). Boasts of her honesty, knowledge and world knowing. Married and treacherous. 
 
 
 
@@ -14991,6 +15029,20 @@ The grass after rain, is greenish green.
  &lt;&lt;heblink [[הדשא]]&gt;&gt;
 </pre>
 </div>
+<div created="20200322164751976" modified="20200713154924380" tags="HH" title="The Hair Salon">
+<pre>[img[pictures/hamispara.jpg]]
+
+
+!!![[Gura]]:
+
+
+In the hair salon you can find [[Anna|The Hairdresser]], who has golden hands.
+
+
+
+ &lt;&lt;heblink [[מספרה]]&gt;&gt;
+</pre>
+</div>
 <div created="20200627160310173" modified="20200627220347072" tags="HH" title="The Hairdresser">
 <pre>[img[pictures/hasaparit.jpg]]
 
@@ -15075,10 +15127,13 @@ A K sister [[will forever be|HH]] a K sister
  &lt;&lt;heblink [[המעבדה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200322164140601" modified="20200322164320569" tags="HH" title="The lawyer">
+<div created="20200322164140601" modified="20200713160239431" tags="HH" title="The lawyer">
 <pre>[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
 
 
+!!![[Gura]]:
+
+Nancy is a lawyer, she studied in England, she's high and mighty, racist, the whole set of a [[K sister|The K Sisters]], including being &quot;chic &quot; in all areas, brand gal, speaks international much, she has a nasty kid who gets beaten and deserves it. 
 
 
 
@@ -16441,9 +16496,13 @@ Actually, I didn't know David Bowie well before Yoyo became part of my daily lif
 
  &lt;&lt;heblink [[יויו וגורה]]&gt;&gt;</pre>
 </div>
-<div created="20200628135532718" modified="20200628135958919" tags="HH Music" title="Zzzen radio">
+<div created="20200628135532718" modified="20200713160023280" tags="HH Music" title="Zzzen radio">
 <pre>[img[pictures/galey-zachal.jpg]]
 
+
+!!![[Gura]]:
+
+One of two local radio stations of [[Genesis Hilltop]], inside the [[Cd store]].
 
 
 
