--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עורכת הדין]] HH [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9280,7 +9280,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200627221625712" title="$:/temp/search">
+<div created="20161023184814872" modified="20200713160118883" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11100,7 +11100,7 @@ Is where I want to be
 
 &lt;&lt;englink [[Beta VeGriga]]&gt;&gt;</pre>
 </div>
-<div created="20190415190001072" modified="20200628141326060" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
+<div created="20190415190001072" modified="20200713154654888" tags="קפה [[חיות אוכל]] [[מטא בדיון]] לחם" title="בתי קפה">
 <pre>[img[pictures/coffee-shops.jpg]]
 
 !!![[הצוות]]:
@@ -11977,12 +11977,12 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170506193344594" modified="20200628135923753" tags="HH מוזיקה" title="גלי זחל">
+<div created="20170506193344594" modified="20200713155932483" tags="HH מוזיקה" title="גלי זחל">
 <pre>[img[pictures/galey-zachal.jpg]]
 
 !!![[גורה]]:
 
-[[אחת מתוך שתי|גלי זחל]] תחנות רדיו מקומיות של [[מצפה ראשית]], שנמצאת [[בחנות הדיסקים|חנות דיסקים]].
+אחת מתוך שתי תחנות רדיו מקומיות של [[מצפה ראשית]], שנמצאת [[בחנות הדיסקים|חנות דיסקים]].
 
 
 
@@ -16639,7 +16639,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Restaurants]]&gt;&gt;</pre>
 </div>
-<div created="20170507173634371" modified="20200322165242806" tags="HH" title="מספרה">
+<div created="20170507173634371" modified="20200713154723409" tags="HH" title="מספרה">
 <pre>[img[pictures/hamispara.jpg]]
 
 !!![[גורה]]:
@@ -16649,7 +16649,7 @@ We rise to play a greater part.
 
 
 
-&lt;&lt;englink [[The barber shop]]&gt;&gt;</pre>
+&lt;&lt;englink [[The Hair Salon]]&gt;&gt;</pre>
 </div>
 <div created="20170320163938974" modified="20200313120707620" tags="HH" title="מערכת העיתון">
 <pre>[img[pictures/maarechet-haiton.jpg]]
