--- a/english.html
+++ b/english.html
@@ -9162,7 +9162,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Stalin [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -14476,7 +14476,7 @@ The [[Alexanderian|Alexander Technique]] thinking is very beneficial, in order t
  &lt;&lt;heblink [[קפיץ ספירלי]]&gt;&gt;
 </pre>
 </div>
-<div created="20200627152629924" modified="20200713155549737" tags="HH Metafiction" title="Stalin">
+<div created="20200627152629924" modified="20200713164751145" tags="HH Metafiction" title="Stalin">
 <pre>[img[pictures/stalin.jpg]]
 
 
