--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עורכת הדין]] HH [[האחיות כהן]]" title="$:/StoryList">
+<div list="HH סטלין [[מערכת העיתון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9280,7 +9280,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200713160118883" title="$:/temp/search">
+<div created="20161023184814872" modified="20200713160546023" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -16651,7 +16651,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[The Hair Salon]]&gt;&gt;</pre>
 </div>
-<div created="20170320163938974" modified="20200313120707620" tags="HH" title="מערכת העיתון">
+<div created="20170320163938974" modified="20200716060303781" tags="HH" title="מערכת העיתון">
 <pre>[img[pictures/maarechet-haiton.jpg]]
 
 !!![[גורה]]:
