--- a/english.html
+++ b/english.html
@@ -9162,7 +9162,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Stalin [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The K Sisters]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9182,7 +9182,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200713160607242" title="$:/temp/search">
+<div created="20161023184814872" modified="20200716125610520" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11965,7 +11965,6 @@ He thinks Rita got sick because of me. I don't know how he spends his spare time
 </div>
 <div created="20200212174127022" modified="20200713160738241" tags="Music [[How many songs can you even invent at all]] [[The global village]] [[Stories from the future]]" title="Imagine">
 <pre>
-
 
 !!![[Coen Sisters]]:
 
@@ -15096,8 +15095,8 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
  &lt;&lt;heblink [[ההוסטל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200627160839146" modified="20200627161221073" tags="HH" title="The K Sisters">
-<pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
+<div created="20200627160839146" modified="20200716125627730" tags="HH" title="The K Sisters">
+<pre>[img[pictures/ksisters.jpg]]
 
 
 !!![[Gura]]:
