--- a/english.html
+++ b/english.html
@@ -9162,7 +9162,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The K Sisters]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9182,7 +9182,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200716125610520" title="$:/temp/search">
+<div created="20161023184814872" modified="20200716160006709" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11965,7 +11965,6 @@ He thinks Rita got sick because of me. I don't know how he spends his spare time
 </div>
 <div created="20200212174127022" modified="20200713160738241" tags="Music [[How many songs can you even invent at all]] [[The global village]] [[Stories from the future]]" title="Imagine">
 <pre>
-
 !!![[Coen Sisters]]:
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=L6svOHFSAH8]]
@@ -15223,8 +15222,8 @@ Sometimes I'm a yoga teacher, even though I'm not a fan of glaze taste. Sometime
  &lt;&lt;heblink [[יד ימין אינה יודעת]]&gt;&gt;
 </pre>
 </div>
-<div created="20200627161353971" modified="20200627161629845" tags="HH" title="The Sailor">
-<pre>[img[pictures/4p7ymuvEEEOFCkzR.jpg]]
+<div created="20200627161353971" modified="20200716160028890" tags="HH" title="The Sailor">
+<pre>[img[pictures/thesailor.jpg]]
 
 
 !!![[Gura]]:
