--- a/english.html
+++ b/english.html
@@ -9162,7 +9162,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The business lady]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9182,7 +9182,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200716160006709" title="$:/temp/search">
+<div created="20161023184814872" modified="20200716203437939" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14824,8 +14824,8 @@ Don’t say [[THE BRIDGE|https://www.imdb.com/title/tt1733785/]], say [[Saga Nor
 
 </pre>
 </div>
-<div created="20200628140616355" modified="20200713160456368" tags="HH" title="The business lady">
-<pre>[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
+<div created="20200628140616355" modified="20200716203645537" tags="HH" title="The business lady">
+<pre>[img[pictures/businesslady.jpg]]
 
 !!![[Gura]]:
 
@@ -15125,8 +15125,8 @@ A K sister [[will forever be|HH]] a K sister
  &lt;&lt;heblink [[המעבדה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200322164140601" modified="20200713160239431" tags="HH" title="The lawyer">
-<pre>[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
+<div created="20200322164140601" modified="20200716203714166" tags="HH" title="The lawyer">
+<pre>[img[pictures/thelawyer.jpg]]
 
 
 !!![[Gura]]:
