--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עורכת הדין]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="HH [[אשת העסקים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10794,8 +10794,11 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Arnon Chen]]&gt;&gt;
 </pre>
 </div>
-<div created="20170319170256065" modified="20200628140903777" tags="HH" title="אשת העסקים">
-<pre>[img[pictures/oh3SWvg2g1OAPJFl.jpg]]
+<div created="20170319170256065" modified="20200716204130571" tags="HH" title="אשת העסקים">
+<pre>[img[pictures/businesslady.jpg]]
+
+
+!!![[גורה]]:
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.
 
@@ -17983,8 +17986,8 @@ __אופן ההכנה:__
 
 </pre>
 </div>
-<div created="20170319172108447" modified="20200322164450395" tags="HH" title="עורכת הדין">
-<pre>[img[pictures/4kRbQgdyhAC1bAb3.jpg]]
+<div created="20170319172108447" modified="20200716203605137" tags="HH" title="עורכת הדין">
+<pre>[img[pictures/thelawyer.jpg]]
 
 !!![[גורה]]:
 
