--- a/english.html
+++ b/english.html
@@ -9162,7 +9162,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The business lady]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[The Camera]] [[The business lady]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9182,7 +9182,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200716203437939" title="$:/temp/search">
+<div created="20161023184814872" modified="20200717180605539" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14837,8 +14837,8 @@ Nadia is a business woman of the [[K kind|The K Sisters]]. She looks old, and dr
 
 </pre>
 </div>
-<div created="20200627162251658" modified="20200627162501360" tags="HH" title="The Camera">
-<pre>[img[pictures/UqCNt0i5VQFWqv6t.jpg]]
+<div created="20200627162251658" modified="20200717180602036" tags="HH" title="The Camera">
+<pre>[img[pictures/thecamera.jpg]]
 
 
 
