--- a/english.html
+++ b/english.html
@@ -9162,7 +9162,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[The Camera]] [[The business lady]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Odelia [[Leonard Cohen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9182,7 +9182,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200717180605539" title="$:/temp/search">
+<div created="20161023184814872" modified="20200718112320951" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11964,8 +11964,7 @@ He thinks Rita got sick because of me. I don't know how he spends his spare time
 </pre>
 </div>
 <div created="20200212174127022" modified="20200713160738241" tags="Music [[How many songs can you even invent at all]] [[The global village]] [[Stories from the future]]" title="Imagine">
-<pre>
-!!![[Coen Sisters]]:
+<pre>!!![[Coen Sisters]]:
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=L6svOHFSAH8]]
 
@@ -13364,8 +13363,8 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 
  &lt;&lt;heblink [[נוטבוק]]&gt;&gt;</pre>
 </div>
-<div created="20200217133031335" modified="20200217133537659" tags="HH" title="Odelia">
-<pre>[img[pictures/150crYxBlBOKkAyo.jpg]]
+<div created="20200217133031335" modified="20200718112318095" tags="HH" title="Odelia">
+<pre>[img[pictures/odelia.jpg]]
 
 !!![[Gura]]:
 
