--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אשת העסקים]] המצלמה [[האחיות כהן]]" title="$:/StoryList">
+<div list="אודליה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9280,7 +9280,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200716141607538" title="$:/temp/search">
+<div created="20161023184814872" modified="20200718112359661" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9771,8 +9771,8 @@ Sunny one so true, I love you.//
 
 &lt;&lt;englink [[My whole brother Aharon]]&gt;&gt;</pre>
 </div>
-<div created="20170319182511016" modified="20200217133442946" tags="HH" title="אודליה">
-<pre>[img[pictures/150crYxBlBOKkAyo.jpg]]
+<div created="20170319182511016" modified="20200718112423135" tags="HH" title="אודליה">
+<pre>[img[pictures/odelia.jpg]]
 
 !!![[גורה]]:
 
