--- a/english.html
+++ b/english.html
@@ -9162,7 +9162,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Odelia [[Leonard Cohen]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Stalin's basement]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9182,7 +9182,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200718112320951" title="$:/temp/search">
+<div created="20161023184814872" modified="20200718185413223" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14489,13 +14489,8 @@ In order to get to the office of Stalin, the janitor of [[Gesund-Heights]] who's
  &lt;&lt;heblink [[סטלין]]&gt;&gt;
 </pre>
 </div>
-<div created="20200313121234753" modified="20200313121413548" tags="HH" title="Stalin's basement">
-<pre>@@.center.ltr
-[img[למצולמים אין קשר|https://farm4.staticflickr.com/3459/3363312260_b02869fff2_z_d.jpg]]
-
-([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
-@@
-
+<div created="20200313121234753" modified="20200718190350384" tags="HH" title="Stalin's basement">
+<pre>[img[pictures/stalinsbasement.jpg]]
 
 
  &lt;&lt;heblink [[המרתף של סטלין]]&gt;&gt;
