--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אודליה [[האחיות כהן]]" title="$:/StoryList">
+<div list="HH [[המרתף של סטלין]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13048,16 +13048,16 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 &lt;&lt;englink [[The Camera]]&gt;&gt;</pre>
 </div>
-<div created="20161024204444942" modified="20200313121533376" tags="בתים HH" title="המרתף של סטלין">
-<pre>בקומה מינוס 1 של [[געזונטהייטס]] מתגורר [[סטלין]] השרת. כאן נמצאים כל כלי העבודה ואמצעי הייצור שלו: ממטאטאים ומצלמות אבטחה רזרביות ועד ל[[שָה נוּאָר]], השרת שמארח את
+<div created="20161024204444942" modified="20200718185602827" tags="בתים HH" title="המרתף של סטלין">
+<pre>
+[img[pictures/stalinsbasement.jpg]]
+
+
+
+בקומה מינוס 1 של [[געזונטהייטס]] מתגורר [[סטלין]] השרת. כאן נמצאים כל כלי העבודה ואמצעי הייצור שלו: ממטאטאים ומצלמות אבטחה רזרביות ועד ל[[שָה נוּאָר]], השרת שמארח את
 ה[[וויקי|https://he.wikipedia.org/wiki/%D7%95%D7%99%D7%A7%D7%99]]
 של [[האחיות כהן]].
 
-@@.center.ltr
-[img[למצולמים אין קשר|https://farm4.staticflickr.com/3459/3363312260_b02869fff2_z_d.jpg]]
-
-([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
-@@
 
 
 
