--- a/index.html
+++ b/index.html
@@ -9260,7 +9260,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="HH [[המרתף של סטלין]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ג'ון אירווינג]] [[המרתף של סטלין]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9280,7 +9280,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200718112359661" title="$:/temp/search">
+<div created="20161023184814872" modified="20200723111508005" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11161,7 +11161,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170415192146343" modified="20200320092624508" tags="[[אחיות חוץ]] סרטים סגירים" title="ג'ון אירווינג">
+<div created="20170415192146343" modified="20200723111504933" tags="[[אחיות חוץ]] סרטים סגירים" title="ג'ון אירווינג">
 <pre>[img[pictures/john-irving.jpg]]
 
 !!![[גורה]]:
@@ -11169,7 +11169,7 @@ Is where I want to be
 
 [[ג'ון אירווינג|https://he.wikipedia.org/wiki/%D7%92%27%D7%95%D7%9F_%D7%90%D7%99%D7%A8%D7%95%D7%95%D7%99%D7%A0%D7%92]] הוא סופר הנשמה של יויו, והוא עומד בשורה אחת [[כאחות חוץ|אחיות חוץ]], עם [[האחים כהן|איתן וג'ואל כהן]], 
 
- &lt;&lt;englink [[john irving]]&gt;&gt;
+ &lt;&lt;englink [[John Irving]]&gt;&gt;
 
 
 
@@ -13049,8 +13049,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[The Camera]]&gt;&gt;</pre>
 </div>
 <div created="20161024204444942" modified="20200718185602827" tags="בתים HH" title="המרתף של סטלין">
-<pre>
-[img[pictures/stalinsbasement.jpg]]
+<pre>[img[pictures/stalinsbasement.jpg]]
 
 
 
